Worked on Business Onboarding

--- a/Appzinara/templates/files/index.html
+++ b/Appzinara/templates/files/index.html
@@ -43,7 +43,7 @@
                                 <div class="fs-3 fw-light text-muted">I can help your business to</div>
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Effortlessly manage appointments, enhance customer experience, and scale.</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="#!">Get Started</a>
+                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="{% url 'onboarding' %}">Get Started</a>
                                 </div>
                             </div>
                         </div>
@@ -199,7 +199,7 @@
                                     <p class="display-6 fw-bold">
                                         ${{ pricing.price }}<span class="fs-6">/month</span>
                                     </p>
-                                    <a href="#" class="btn btn-primary mt-3">Get Started</a>
+                                    <a href="{% url 'onboarding' %}" class="btn btn-primary mt-3">Get Started</a>
                                 </div>
                             </div>
                         </div>
